--- a/styles/mainn.css
+++ b/styles/mainn.css
@@ -93,7 +93,7 @@
 .bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-brown,
 .bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-brown {
   color: #fff;
-  background:#673AB7;
+  background:#2951C4;
 }
 
 .bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-blue,
@@ -269,7 +269,7 @@
 }
 
 .bootstrap-switch.bootstrap-switch-on .bootstrap-switch-brown ~ .bootstrap-switch-default {
-  background-color:#673AB7;
+  background-color:#2951C4;
 }
 
 .bootstrap-switch.bootstrap-switch-on .bootstrap-switch-blue ~ .bootstrap-switch-default {
@@ -590,7 +590,7 @@
 }
 
 .slider.slider-primary .noUi-connect, .slider.slider-primary.noUi-connect {
-  background-color:#673AB7;
+  background-color:#2951C4;
 }
 
 .slider.slider-primary.noUi-target {
@@ -598,7 +598,7 @@
 }
 
 .slider.slider-primary .noUi-handle {
-  background-color:#673AB7;
+  background-color:#2951C4;
 }
 
 .slider.slider-info .noUi-connect, .slider.slider-info.noUi-connect {
@@ -675,7 +675,7 @@
 }
 
 .datepicker.datepicker-primary {
-  background-color:#673AB7;
+  background-color:#2951C4;
 }
 
 .datepicker.datepicker-primary th,
@@ -685,11 +685,11 @@
 }
 
 .datepicker.datepicker-primary:after {
-  border-bottom-color:#673AB7;
+  border-bottom-color:#2951C4;
 }
 
 .datepicker.datepicker-primary.datepicker-orient-top:after {
-  border-top-color:#673AB7;
+  border-top-color:#2951C4;
 }
 
 .datepicker.datepicker-primary .dow {
@@ -720,7 +720,7 @@
 .datepicker.datepicker-primary table tr td.active.disabled div,
 .datepicker.datepicker-primary table tr td.active.disabled:hover div {
   background-color: #FFFFFF;
-  color:#673AB7;
+  color:#2951C4;
 }
 
 .datepicker.datepicker-primary table tr td.day:hover div,
@@ -791,7 +791,7 @@
 .datepicker.datepicker-primary table tr td span.active:hover[disabled],
 .datepicker.datepicker-primary table tr td span.active.disabled[disabled],
 .datepicker.datepicker-primary table tr td span.active.disabled:hover[disabled] {
-  color:#673AB7;
+  color:#2951C4;
 }
 
 .datepicker-inline {
@@ -900,7 +900,7 @@
 }
 
 .datepicker th {
-  color:#673AB7;
+  color:#2951C4;
 }
 
 .table-condensed > tbody > tr > td,
@@ -1110,7 +1110,7 @@
 .datepicker table tr td.active:hover div,
 .datepicker table tr td.active.disabled div,
 .datepicker table tr td.active.disabled:hover div {
-  background-color:#673AB7;
+  background-color:#2951C4;
   color: #FFFFFF;
   -webkit-box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.2);
@@ -1136,7 +1136,7 @@
 .datepicker table tr td.active:hover[disabled] div,
 .datepicker table tr td.active.disabled[disabled] div,
 .datepicker table tr td.active.disabled:hover[disabled] div {
-  background-color:#673AB7;
+  background-color:#2951C4;
 }
 
 .datepicker table tr td.active:active,
@@ -1179,7 +1179,7 @@
 .datepicker table tr td span.active.disabled,
 .datepicker table tr td span.active.disabled:hover {
   color: #fff;
-  background-color:#673AB7;
+  background-color:#2951C4;
 }
 
 .datepicker table tr td span.active:hover,
@@ -1202,7 +1202,7 @@
 .datepicker table tr td span.active:hover[disabled],
 .datepicker table tr td span.active.disabled[disabled],
 .datepicker table tr td span.active.disabled:hover[disabled] {
-  background-color:#673AB7;
+  background-color:#2951C4;
   -webkit-box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.2);
 }
@@ -1515,7 +1515,7 @@ fieldset[disabled]
 }
 
 .btn-primary {
-  background-color:#673AB7;
+  background-color:#2951C4;
   color: #FFFFFF;
 }
 
@@ -1541,13 +1541,13 @@ fieldset[disabled] .btn-primary:focus,
 fieldset[disabled] .btn-primary.focus,
 fieldset[disabled] .btn-primary:active,
 fieldset[disabled] .btn-primary.active {
-  background-color:#673AB7;
-  border-color:#673AB7;
+  background-color:#2951C4;
+  border-color:#2951C4;
 }
 
 .btn-primary.btn-simple {
-  color:#673AB7;
-  border-color:#673AB7;
+  color:#2951C4;
+  border-color:#2951C4;
 }
 
 .btn-primary.btn-simple:hover, .btn-primary.btn-simple:focus, .btn-primary.btn-simple:active {
@@ -1559,7 +1559,7 @@ fieldset[disabled] .btn-primary.active {
 }
 
 .btn-primary.btn-link {
-  color:#673AB7;
+  color:#2951C4;
 }
 
 .btn-primary.btn-link:hover, .btn-primary.btn-link:focus, .btn-primary.btn-link:active {
@@ -1796,7 +1796,7 @@ fieldset[disabled] .btn-danger.active {
 
 .btn-neutral {
   background-color: #FFFFFF;
-  color:#673AB7;
+  color:#2951C4;
 }
 
 .btn-neutral:hover, .btn-neutral:focus, .btn-neutral:active, .btn-neutral.active, .btn-neutral:active:focus, .btn-neutral:active:hover, .btn-neutral.active:focus, .btn-neutral.active:hover,
@@ -2058,7 +2058,7 @@ fieldset[disabled]
 }
 
 .form-control:focus {
-  border: 1px solid#673AB7;
+  border: 1px solid#2951C4;
   -webkit-box-shadow: none;
   box-shadow: none;
   outline: 0 !important;
@@ -2067,7 +2067,7 @@ fieldset[disabled]
 
 .form-control:focus + .input-group-addon,
 .form-control:focus ~ .input-group-addon {
-  border: 1px solid#673AB7;
+  border: 1px solid#2951C4;
   border-left: none;
   background-color: transparent;
 }
@@ -2290,7 +2290,7 @@ fieldset[disabled]
 
 .input-group-focus .input-group-addon {
   background-color: #FFFFFF;
-  border-color:#673AB7;
+  border-color:#2951C4;
 }
 
 .input-group-focus.form-group-no-border .input-group-addon {
@@ -2556,7 +2556,7 @@ textarea.form-control:focus, textarea.form-control:active {
 }
 
 .progress-container .progress-badge {
-  color:#673AB7;
+  color:#2951C4;
   font-size: 0.8571em;
   text-transform: uppercase;
 }
@@ -2573,14 +2573,14 @@ textarea.form-control:focus, textarea.form-control:active {
 .progress-container .progress .progress-bar {
   -webkit-box-shadow: none;
           box-shadow: none;
-  background-color:#673AB7;
+  background-color:#2951C4;
 }
 
 .progress-container .progress .progress-value {
   position: absolute;
   top: 2px;
   right: 0;
-  color:#673AB7;
+  color:#2951C4;
   font-size: 0.8571em;
 }
 
@@ -2602,12 +2602,12 @@ textarea.form-control:focus, textarea.form-control:active {
 }
 
 .progress-container.progress-primary .progress-bar {
-  background:#673AB7;
+  background:#2951C4;
 }
 
 .progress-container.progress-primary .progress-value,
 .progress-container.progress-primary .progress-badge {
-  color:#673AB7;
+  color:#2951C4;
 }
 
 .progress-container.progress-info .progress {
@@ -2689,8 +2689,8 @@ textarea.form-control:focus, textarea.form-control:active {
 }
 
 .badge-primary {
-  border-color:#673AB7;
-  color:#673AB7;
+  border-color:#2951C4;
+  color:#2951C4;
 }
 
 .badge-info {
@@ -2784,8 +2784,8 @@ textarea.form-control:focus, textarea.form-control:active {
 }
 
 .pagination.pagination-primary .page-item.active > .page-link, .pagination.pagination-primary .page-item.active > .page-link:focus, .pagination.pagination-primary .page-item.active > .page-link:hover {
-  background-color:#673AB7;
-  border-color:#673AB7;
+  background-color:#2951C4;
+  border-color:#2951C4;
 }
 
 .pagination.pagination-warning .page-item.active > .page-link, .pagination.pagination-warning .page-item.active > .page-link:focus, .pagination.pagination-warning .page-item.active > .page-link:hover {
@@ -2810,7 +2810,7 @@ textarea.form-control:focus, textarea.form-control:active {
 .pagination.pagination-neutral .page-item.active > .page-link, .pagination.pagination-neutral .page-item.active > .page-link:focus, .pagination.pagination-neutral .page-item.active > .page-link:hover {
   background-color: #FFFFFF;
   border-color: #FFFFFF;
-  color:#673AB7;
+  color:#2951C4;
 }
 
 button,
@@ -2830,11 +2830,11 @@ small {
 }
 
 a {
-  color:#673AB7;
+  color:#2951C4;
 }
 
 a:hover, a:focus {
-  color:#673AB7;
+  color:#2951C4;
 }
 
 h1, .h1 {
@@ -2924,7 +2924,7 @@ p {
 }
 
 .text-primary {
-  color:#673AB7 !important;
+  color:#2951C4 !important;
 }
 
 .text-info {
@@ -2962,12 +2962,12 @@ p {
 }
 
 .blockquote.blockquote-primary {
-  border-color:#673AB7;
-  color:#673AB7;
+  border-color:#2951C4;
+  color:#2951C4;
 }
 
 .blockquote.blockquote-primary small {
-  color:#673AB7;
+  color:#2951C4;
 }
 
 .blockquote.blockquote-danger {
@@ -3055,7 +3055,7 @@ body {
 }
 
 .separator.separator-primary {
-  background-color:#673AB7;
+  background-color:#2951C4;
 }
 
 .nav-pills .nav-item .nav-link {
@@ -3098,11 +3098,11 @@ body {
 
 .nav-pills.nav-pills-neutral .nav-item .nav-link.active, .nav-pills.nav-pills-neutral .nav-item .nav-link.active:focus, .nav-pills.nav-pills-neutral .nav-item .nav-link.active:hover {
   background-color: #FFFFFF;
-  color:#673AB7;
+  color:#2951C4;
 }
 
 .nav-pills.nav-pills-primary .nav-item .nav-link.active, .nav-pills.nav-pills-primary .nav-item .nav-link.active:focus, .nav-pills.nav-pills-primary .nav-item .nav-link.active:hover {
-  background-color:#673AB7;
+  background-color:#2951C4;
 }
 
 .nav-pills.nav-pills-info .nav-item .nav-link.active, .nav-pills.nav-pills-info .nav-item .nav-link.active:focus, .nav-pills.nav-pills-info .nav-item .nav-link.active:hover {
@@ -3215,8 +3215,8 @@ body {
 }
 
 .nav-tabs.nav-tabs-primary > .nav-item > .nav-link.active {
-  border-color:#673AB7;
-  color:#673AB7;
+  border-color:#2951C4;
+  color:#2951C4;
 }
 
 .nav-tabs.nav-tabs-info > .nav-item > .nav-link.active {
@@ -3402,7 +3402,7 @@ body {
 }
 
 .bg-primary {
-  background-color:#673AB7 !important;
+  background-color:#2951C4 !important;
 }
 
 .bg-info {
@@ -3740,7 +3740,7 @@ img {
 }
 
 .popover.popover-primary {
-  background-color:#673AB7;
+  background-color:#2951C4;
 }
 
 .popover.popover-primary .popover-body {
@@ -3748,19 +3748,19 @@ img {
 }
 
 .popover.popover-primary.bs-popover-right .arrow:after {
-  border-right-color:#673AB7;
+  border-right-color:#2951C4;
 }
 
 .popover.popover-primary.bs-popover-top .arrow:after {
-  border-top-color:#673AB7;
+  border-top-color:#2951C4;
 }
 
 .popover.popover-primary.bs-popover-bottom .arrow:after {
-  border-bottom-color:#673AB7;
+  border-bottom-color:#2951C4;
 }
 
 .popover.popover-primary.bs-popover-left .arrow:after {
-  border-left-color:#673AB7;
+  border-left-color:#2951C4;
 }
 
 .popover.popover-primary .popover-header {
@@ -4503,7 +4503,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .modal.modal-mini .modal-profile i {
-  color:#673AB7;
+  color:#2951C4;
   font-size: 21px;
 }
 
@@ -4512,7 +4512,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .modal.modal-mini .modal-profile.modal-profile-primary {
-  background-color:#673AB7;
+  background-color:#2951C4;
 }
 
 .modal.modal-mini .modal-profile.modal-profile-danger {
@@ -4549,7 +4549,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .modal.modal-primary .modal-content {
-  background-color:#673AB7;
+  background-color:#2951C4;
   color: #FFFFFF;
 }
 
@@ -4639,7 +4639,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .card[data-background-color="orange"] {
-  background-color:#673AB7;
+  background-color:#2951C4;
 }
 
 .card[data-background-color="red"] {
@@ -6327,13 +6327,13 @@ Created using IcoMoon - icomoon.io
     transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   }
   .burger-menu .navbar-collapse:before {
-    background:#673AB7;
+    background:#2951C4;
     /* For browsers that do not support gradients */
     /* For Safari 5.1 to 6.0 */
     /* For Opera 11.1 to 12.0 */
     /* For Firefox 3.6 to 15 */
-    background: -webkit-gradient(linear, left top, left bottom, from(#673AB7), color-stop(80%, #000));
-    background: linear-gradient(#673AB7 0%, #000 80%);
+    background: -webkit-gradient(linear, left top, left bottom, from(#2951C4), color-stop(80%, #000));
+    background: linear-gradient(#2951C4 0%, #000 80%);
     /* Standard syntax (must be last) */
     opacity: 0.76;
     filter: alpha(opacity=76);
@@ -7098,7 +7098,7 @@ Created using IcoMoon - icomoon.io
 
 .cc-profile-image a:before {
   content: "";
-  border: 15px solid #673AB7;
+  border: 15px solid #2951C4;
   border-radius: 50%;
   height: 180px;
   width: 180px;
@@ -7175,12 +7175,12 @@ Created using IcoMoon - icomoon.io
   text-align: center;
   color: #fff;
   text-transform: uppercase;
-  background-color:#673AB7;
+  background-color:#2951C4;
 }
 
 /* Education Style */
 .cc-education .h5 {
-  margin-bottom: 0;
+  margin-bottom: 0; 
 }
 
 .cc-education .cc-education-header {
@@ -7188,7 +7188,7 @@ Created using IcoMoon - icomoon.io
   padding-right: 0;
   text-align: center;
   color: #fff;
-  background-color:#673AB7;
+  background-color:#2951C4;
 }
 
 /* References Style */
@@ -7210,7 +7210,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .cc-reference .carousel-indicators .active {
-  background-color:#673AB7;
+  background-color:#2951C4;
 }
 
 .cc-reference .carousel-inner {
